# slang-bench

./: .gitmodules  README.md  flake.nix  pyproject.toml
report/: Makefile  benchmark.ipynb  benchmark.json  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  neurips_2025.sty  references.bib
report/_minted/: 3919DBF4A6E0242CB502E0CAA98FE557.highlight.minted  5E8508D8FE122BFA807AC63A0D041DF9.highlight.minted  7820F95FAA4F85C43294FF01CEF9A9DB.highlight.minted  _FAD58DE7366495DB4650CFEFAC2FCD61.index.minted
src/slang_bench/: __init__.py  linear_layer.py
src/slang_bench/slang/: linear_eval.slang  linear_layer.slang
tests/: test_linear.py
